# moonstone_external_source-OBSOLETE

./: .gitignore  .pre-commit-config.yaml  README.rst  pyproject.toml  tox.ini
src/: conftest.py
src/gradesens/: __init__.py
src/gradesens/moonstone/: __init__.py
src/gradesens/moonstone/snooper/: __init__.py  backend_driver.py  error.py  io_manager.py  snooper.py
src/gradesens/moonstone/snooper/tests/: configuration_fixtures.py  test_000_settings.py  test_002_date_time.py  test_004_data_ranges.py  test_006_processors.py  test_010_configuration.py  test_012_common_configuration.py  test_014_time_margin.py  test_020_result.py  test_100_io_driver.py  test_500_tak.py  utils.py
src/gradesens/moonstone_external_source/: __init__.py  async_concurrent_pool.py  authentication_configuration.py  authorization_configuration.py  backend_driver.py  configuration.py  configuration_ids_configuration.py  configuration_references.py  datetime.py  error.py  external_source.py  http_settings.py  io_driver.py  io_manager.py  settings.py  utils.py
src/gradesens/moonstone_external_source/tests/: configuration_fixtures.py  test_000_basic.py  test_000_configuration.py  test_000_settings.py  test_002_date_time.py  test_004_bool.py  test_004_data_ranges.py  test_006_processors.py  test_010_configuration.py  test_010_request_processor.py  test_012_common_configuration.py  test_014_time_margin.py  test_020_io_driver.py  test_020_result.py  test_100_io_driver.py  test_200_external_source.py  test_500_tak.py  utils.py
src/gradesens/moonstone_snooper/: async_concurrent_pool.py  authorization_configuration.py  configuration.py  configuration_references.py  datetime.py  http_settings.py  settings.py  utils.py
src/gradesens/moonstone_snooper/tests/: configuration_fixtures.py  test_000_settings.py  test_002_date_time.py  test_004_data_ranges.py  test_006_processors.py  test_010_configuration.py  test_012_common_configuration.py  test_014_time_margin.py  test_020_result.py  test_100_io_driver.py  test_500_tak.py  utils.py
