[tool.poetry]
name = "moonstone-snooper"
version = "0.0.1"
license = "Proprietary"
description = """
GradeSens - Moonstone Snooper package\
"""
authors = ["GradeSens AG <info@gradesens.com>"]
maintainers = ["Massimo Ravasi <massimo@gradesens.com>"]

packages = [
    { from = "src", include = "gradesens" }
]
exclude = ["**/tests/", "**/test/", "**/conftest.py"]

[tool.poetry.dependencies]
# IMPORTANT: when updating these dependencies, you MUST update correspondingly
# the dependencies in tox.ini as well. See also the comment on project
# dependencies in tox.ini, [testenv] table, `deps` value.
python = "^3.8"

aiohttp = "^3.8.3"
aiodns = "^3.0.0"
pytimeparse = "^1.1.8"

[tool.poetry.dev-dependencies]
tox = "^3.27"
pre-commit = "2.20.0"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
